# ImageTriager

./: .gitignore  CODEBASE_REVIEW.md  POWER_TOOLS_PLAN.md  PRODUCT_ROADMAP.md  README.md  UI_OVERHAUL_PLAN.md  freeze_support.py  pyproject.toml  setup_linux.py  setup_msi.py
benchmarks/: __init__.py  baseline.py
image_triage/: AI_READONLY_INTEGRATION.md  __init__.py  __main__.py  ai_cluster_view.py  ai_model.py  ai_results.py  ai_training.py  ai_workflow.py  annotation_queue.py  archive_ops.py  batch_rename.py  brackets.py  bursts.py  cache.py  decision_store.py  file_associations.py  file_ops.py  filtering.py  fits_support.py  formats.py  grid.py  image_convert.py  image_ops.py  image_resize.py  imaging.py  job_controller.py  keyboard_mapping.py  library_store.py  main.py  metadata.py  models.py  preview.py  production_workflows.py  records_view_cache.py  review_intelligence.py  review_tools.py  review_workflows.py  scan_cache.py  scanner.py  settings_dialog.py  (+4 more)
packaging/: ai_python_runner.py  install_linux.sh  linux-build-requirements.txt
tests/: test_ai_model.py  test_ai_results_phase1.py  test_ai_training.py  test_ai_workflow.py  test_annotation_hydration.py  test_annotation_queue.py  test_bursts.py  test_catalog_repository.py  test_dinov2_extractor.py  test_file_associations.py  test_filtering.py  test_fits_stf.py  test_formats.py  test_freeze_support.py  test_grid_failures.py  test_job_controller.py  test_library_store.py  test_main.py  test_media_plugins.py  test_preview_polling.py  test_production_workflows.py  test_review_intelligence.py  test_scanner.py  (+3 more)
(+111 files in other folders)
