[project]
name = "image-triage"
version = "0.1.0"
description = "High-performance desktop image triage app built with Python and PySide6."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "exifread>=3.0",
    "numpy>=1.26",
    "PySide6>=6.8",
    "rawpy>=0.20",
]

[project.scripts]
image-triage = "image_triage.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["image_triage*"]
